[gd_scene load_steps=7 format=3 uid="uid://drspj3erxn4j"]

[ext_resource type="Script" path="res://Enemies/turretenemy.gd" id="1_y6lmy"]
[ext_resource type="Texture2D" uid="uid://cumlls2mef2u8" path="res://Assets/Enemies/Exports/GreatWyrm.png" id="2_dh0l3"]
[ext_resource type="Texture2D" uid="uid://bvaf0fimg83xk" path="res://Enemies/turret_range.png" id="4_fog06"]
[ext_resource type="AudioStream" uid="uid://dr5l3qh0yqu23" path="res://Assets/Sounds/186932__readeonly__fire_explosion-[AudioTrimmer.com].wav" id="5_5wtin"]
[ext_resource type="AudioStream" uid="uid://omrvxu66gioo" path="res://Assets/Sounds/48176__hy96__growling.wav" id="5_dbbuc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tqd48"]
radius = 1.0

[node name="TurretEnemy" type="RigidBody3D"]
collision_layer = 2
collision_mask = 0
gravity_scale = 0.0
contact_monitor = true
script = ExtResource("1_y6lmy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_tqd48")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.092, 0, 0, 0, 0.092, 0, 0, 0, 0.092, 0, 0.5, 0)
shaded = true
texture = ExtResource("2_dh0l3")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="EnemyTurret" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Range" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.45, 0)
texture = ExtResource("4_fog06")

[node name="FireblastSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.45, 0)
stream = ExtResource("5_5wtin")
max_distance = 3.0

[node name="PassiveSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_dbbuc")
volume_db = 3.0
autoplay = true
max_distance = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
